[gd_scene load_steps=5 format=3 uid="uid://c4ksq303e1yo2"]

[ext_resource type="Script" path="res://nodeeditor.gd" id="1_dafuw"]
[ext_resource type="Script" path="res://nodes/ConditionNode.gd" id="1_nrblm"]
[ext_resource type="PackedScene" uid="uid://nwf7c00xvug4" path="res://node_btn.tscn" id="2_02rvu"]
[ext_resource type="Script" path="res://GraphEdit.gd" id="2_ptuir"]

[node name="NodeEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dafuw")

[node name="Panels" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BtnContainer" type="VBoxContainer" parent="Panels"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="ValueBtn" parent="Panels/BtnContainer" instance=ExtResource("2_02rvu")]
layout_mode = 2
node_name = "ValueNode"

[node name="ConditionBtn" parent="Panels/BtnContainer" instance=ExtResource("2_02rvu")]
layout_mode = 2
node_name = "ConditionNode"

[node name="DisplayBtn" parent="Panels/BtnContainer" instance=ExtResource("2_02rvu")]
layout_mode = 2
node_name = "DisplayNode"

[node name="GraphEdit" type="GraphEdit" parent="Panels"]
layout_mode = 2
right_disconnects = true
script = ExtResource("2_ptuir")

[node name="NodesLibrary" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ConditionNode" type="GraphNode" parent="NodesLibrary"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 0
offset_left = 510.0
offset_top = 97.0
offset_right = 609.0
offset_bottom = 233.0
mouse_filter = 1
position_offset = Vector2(450, 220)
title = "CONDITION"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = true
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = true
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
script = ExtResource("1_nrblm")

[node name="Label" type="Label" parent="NodesLibrary/ConditionNode"]
layout_mode = 2
text = "A"

[node name="OptionButton" type="OptionButton" parent="NodesLibrary/ConditionNode"]
layout_mode = 2
item_count = 4
selected = 0
popup/item_0/text = "="
popup/item_0/id = 0
popup/item_1/text = "<"
popup/item_1/id = 1
popup/item_2/text = ">"
popup/item_2/id = 2
popup/item_3/text = "!="
popup/item_3/id = 3

[node name="Label2" type="Label" parent="NodesLibrary/ConditionNode"]
layout_mode = 2
text = "B"

[node name="ValueNode" type="GraphNode" parent="NodesLibrary"]
layout_mode = 0
offset_left = 179.0
offset_top = 129.0
offset_right = 282.0
offset_bottom = 215.0
title = "VALUE"
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true

[node name="LineEdit" type="LineEdit" parent="NodesLibrary/ValueNode"]
layout_mode = 2
text = "Hello"
placeholder_text = "type..."

[node name="DisplayNode" type="GraphNode" parent="NodesLibrary"]
layout_mode = 0
offset_left = 713.0
offset_top = 208.0
offset_right = 785.0
offset_bottom = 286.0
title = "DISPLAY"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true

[node name="Label" type="Label" parent="NodesLibrary/DisplayNode"]
layout_mode = 2

[connection signal="connection_request" from="Panels/GraphEdit" to="Panels/GraphEdit" method="_on_connection_request"]
[connection signal="delete_nodes_request" from="Panels/GraphEdit" to="Panels/GraphEdit" method="_on_Graph_delete_nodes_request"]
[connection signal="disconnection_request" from="Panels/GraphEdit" to="Panels/GraphEdit" method="_on_disconnection_request"]
[connection signal="node_deselected" from="Panels/GraphEdit" to="Panels/GraphEdit" method="_on_Graph_node_deselected"]
[connection signal="node_selected" from="Panels/GraphEdit" to="Panels/GraphEdit" method="_on_Graph_node_selected"]
